# RegigPrototype

./: BottomSheet.qml  ButtonVenueName.qml  Button_artist.qml  CMakeLists.txt  Header2.qml  Main.qml  bottomsheet.cpp  bottomsheet.h  coloredsvgimageprovider.cpp  coloredsvgimageprovider.h  comment_section_code_holder.qml  main.cpp
